--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-attachment: fixed;
-  background-image: linear-gradient(rgba(34, 33, 33, 0.75),rgba(34, 33, 33, 0.75)), url('./img/retrowave-background.jpg');
+  background-image: linear-gradient(rgba(34, 33, 33, 0.75),rgba(34, 33, 33, 0.75)), url('./img/background.gif');
   background-size: cover;
+  background-repeat: no-repeat;
   font-family: 'Press Start 2P', cursive;
   overflow-x: hidden;
   position: relative;
@@ -31,7 +32,6 @@ body {
   "about"
   "title"
   "level-selection";
-  grid-gap: 1em;
 }
 /**
  * Style of the about section 
@@ -73,21 +73,13 @@ a > h5:hover{
 }
 
 .title div {
-  margin-top: 16vh;
-  margin-left: 8vw;
-  margin-right: 8vw;
-  margin-bottom: 4vh;
+  margin-top: 12vh;
 }
 
 /**
  * The tile of the project will shine 
  */
-.title h1 {
-  font-size: 3vw;
-}
-
 .glow {
-  font-size: 3vw;
   color: $low-poly-pink;
   text-align: center;
   -webkit-animation: glow 1s ease-in-out infinite alternate;
@@ -106,17 +98,14 @@ a > h5:hover{
 
 .title h4 {
   color: $low-poly-pink;
-  font-size: 1vw;
 }
 
 .title h5{
   color: $low-poly-purple;
-  font-size: 1vw;
 }
 
 .title h6{
   color: white;
-  font-size: 1vw;
 }
 
 /**
@@ -151,6 +140,7 @@ a > h5:hover{
   transition-timing-function: ease-out;
   transition: 0.2s;
   display: grid;
+  grid-template-rows: auto 10% auto auto;
   grid-template-columns: 100%;
   grid-template-areas: 
   "lvl"
@@ -184,22 +174,18 @@ a > h5:hover{
   grid-area: lvl;
   align-self: center;
   justify-self: center;
-  font-size: 2vw;
 }
 
 .card h4{
   grid-area: ttl;
   color: $low-poly-blue;
-  font-size: 1.2vw;
   align-self: center;
   justify-self: center;
 }
 
 .card p{
   grid-area: short-desc;
-  /* margin: 2vh; */
   text-align: center;
-  font-size: 1vw;
   width: 100%;
   align-self: start;
   justify-self: start;
@@ -211,8 +197,7 @@ a > h5:hover{
   grid-area: card-btn;
   margin-top: 1vw;
   width: 100%;
-  height: 100%;
-  font-size: 2vw;
+  height: 80%;
   font-family: 'Press Start 2P', cursive;
   background-color: $low-poly-blue;
   border: none;
